Azure Blob Storage

--- a/Cloud Computing/Azure/Azure Fundamentals/Azure Services/Storage/1.0 Azure Blob Storage.md
+++ b/Cloud Computing/Azure/Azure Fundamentals/Azure Services/Storage/1.0 Azure Blob Storage.md
@@ -150,3 +150,41 @@ ZRS provides excellent performance, low latency, and resiliency for your data if
 The archive tier for Blob Storage isn't currently supported for ZRS, GZRS, or RA-GZRS accounts. Unmanaged disks don't support ZRS or GZRS.
 
 ### Redundancy in a secondary storage
+
+Redundancy options can help provide high durability for your applications. In many regions, you can copy the data within your storage account to a secondary region located hundreds of miles away from the primary region. Copying your storage account to a secondary region ensures that your data remains durable during a complete regional outage or a disaster in which the primary region isn't recoverable.
+
+When you create a storage account, you select the primary region for the account. The paired secondary region is determined based on the primary region, and can't be changed. For more information about regions supported by Azure, see the [Azure regions list](https://learn.microsoft.com/en-us/azure/reliability/regions-list#azure-regions-list-1).
+
+Azure Storage offers two options for copying your data to a secondary region:
+
+- **Geo-redundant storage (GRS)** copies your data synchronously three times within one or more Azure availability zones in the primary region using LRS. It then copies your data asynchronously to a single physical location in the secondary region. Within the secondary region, your data is copied synchronously three times using LRS.
+
+![[blob-004.png]]
+
+- **Geo-zone-redundant storage (GZRS)** copies your data synchronously across three Azure availability zones in the primary region using ZRS. It then copies your data asynchronously to a single physical location in the secondary region. Within the secondary region, your data is copied synchronously three times using LRS.
+
+![[blob-005.png]]
+
+The primary difference between GRS and GZRS is how data is replicated in the primary region. Within the secondary region, data is always replicated synchronously three times using LRS. LRS in the secondary region protects your data against hardware failures.
+
+When you utilize GRS or GZRS, the data in the secondary region isn't available for read or write access unless there's a failover to the secondary region. For read access to the secondary region, configure your storage account to use read-access geo-redundant storage (RA-GRS) or read-access geo-zone-redundant storage (RA-GZRS). For more information, see [Read access to data in the secondary region](https://learn.microsoft.com/en-us/azure/storage/common/storage-redundancy?toc=%2Fazure%2Fstorage%2Fblobs%2Ftoc.json&bc=%2Fazure%2Fstorage%2Fblobs%2Fbreadcrumb%2Ftoc.json#read-access-to-data-in-the-secondary-region).
+
+If the primary region becomes unavailable, you can choose to fail over to the secondary region. After the failover operation completes, the secondary region becomes the primary region and you're able to read and write data. For more information on disaster recovery and to learn how to fail over to the secondary region, see [Disaster recovery and storage account failover](https://learn.microsoft.com/en-us/azure/storage/common/storage-disaster-recovery-guidance).
+
+Azure Files does not support read-access geo-redundant storage (RA-GRS) or read-access geo-zone-redundant storage (RA-GZRS).
+
+|Service|LRS|ZRS|GRS|RA-GRS|GZRS|RA-GZRS|
+|---|---|---|---|---|---|---|
+|Blob storage  <br>(including Data Lake Storage)|✅|✅|✅|✅|✅|✅|
+|Queue storage|✅|✅|✅|✅|✅|✅|
+|Table storage|✅|✅|✅|✅|✅|✅|
+|Azure Files|✅ 1|✅ 1|✅||✅||
+|Azure managed disks|✅|✅ 2|||||
+|Azure Elastic SAN|✅|✅|||||
+
+|Outage scenario|LRS|ZRS|GRS/RA-GRS|GZRS/RA-GZRS|
+|---|---|---|---|---|
+|A node within a data center becomes unavailable|Yes|Yes|Yes|Yes|
+|An entire data center (zonal or nonzonal) becomes unavailable|No|Yes|Yes1|Yes|
+|A region-wide outage occurs in the primary region|No|No|Yes1|Yes1|
+|Read access to the secondary region is available if the primary region becomes unavailable|No|No|Yes (with RA-GRS)|Yes (with RA-|
