--- a/Cloud Computing/Azure/Azure Fundamentals/Azure Services/Storage/3.0 Azure File Storage.md
+++ b/Cloud Computing/Azure/Azure Fundamentals/Azure Services/Storage/3.0 Azure File Storage.md
@@ -1,6 +1,35 @@
+ Azure Files offers fully managed file shares in the cloud that are accessible via the industry standard [Server Message Block (SMB) protocol](https://learn.microsoft.com/en-us/windows/win32/fileio/microsoft-smb-protocol-and-cifs-protocol-overview), [Network File System (NFS) protocol](https://en.wikipedia.org/wiki/Network_File_System), and [Azure Files REST API](https://learn.microsoft.com/en-us/rest/api/storageservices/file-service-rest-api). Azure file shares can be mounted concurrently by cloud or on-premises deployments. SMB Azure file shares are accessible from Windows, Linux, and macOS clients. NFS Azure file shares are accessible from Linux clients. Additionally, SMB Azure file shares can be cached on Windows servers with [Azure File Sync](https://learn.microsoft.com/en-us/azure/storage/file-sync/file-sync-introduction) for fast access near where the data is being used.
 
-Azure managed disks are block-level storage volumes managed by Azure and used with Azure Virtual Machines. Managed disks are like physical disks in an on-premises server, but they're virtualized. With managed disks, you only have to specify the disk type and the disk size, then provision the disk. After you provision the disk, Azure handles the rest.
+## Why Azure files is useful? 
 
-There are five types of managed disks: Ultra Disks, Premium solid-state drives (SSD) v2, Premium SSD, Standard SSD, and Standard hard disk drives (HDD). To learn about each disk type and decide which fits your needs, see [Azure managed disk types](https://learn.microsoft.com/en-us/azure/virtual-machines/disks-types).
+You can use Azure file shares to:
 
-An alternative is to use Azure Elastic SAN as the storage for your virtual machine (VM). With Elastic SAN, you can consolidate the storage for all your workloads into a single storage back end. Elastic SAN can be more cost effective if you have many large-scale, I/O-intensive workloads and top-tier databases. To learn more, see [What is Azure Elastic SAN?](https://learn.microsoft.com/en-us/azure/storage/elastic-san/elastic-san-introduction).
+- **Replace or supplement on-premises file servers**:  
+    Use Azure Files to replace or supplement traditional on-premises file servers or network-attached storage (NAS) devices. Popular operating systems such as Windows, macOS, and Linux can directly mount Azure file shares wherever they are in the world. SMB Azure file shares can also be replicated with Azure File Sync to Windows servers, either on-premises or in the cloud, for performance and distributed caching of the data. With [identity-based authentication](https://learn.microsoft.com/en-us/azure/storage/files/storage-files-active-directory-overview), SMB Azure file shares can work with on-premises Active Directory Domain Services (AD DS) for access control.
+    
+- **"Lift and shift" applications**:  
+    Azure Files makes it easy to "lift and shift" applications to the cloud that expect a file share to store file application or user data. Azure Files enables both the "classic" lift and shift scenario, where both the application and its data are moved to Azure, and the "hybrid" lift and shift scenario, where the application data is moved to Azure Files, and the application continues to run on-premises.
+    
+- **Simplify cloud development**:  
+    You can use Azure Files to simplify new cloud development projects. For example:
+    
+    - **Shared application settings**:  
+        A common pattern for distributed applications is to have configuration files in a centralized location where they can be accessed from many application instances. Application instances can load their configuration through the [Azure Files REST API](https://learn.microsoft.com/en-us/rest/api/storageservices/file-service-rest-api), and humans can access them by mounting the share locally.
+        
+    - **Diagnostic share**:  
+        An Azure file share is a convenient place for cloud applications to write their logs, metrics, and crash dumps. Logs can be written by the application instances via the File REST API, and developers can access them by mounting the file share on their local machine. This enables great flexibility, as developers can embrace cloud development without having to abandon any existing tooling they know and love.
+        
+    - **Dev/Test/Debug**:  
+        When developers or administrators are working on VMs in the cloud, they often need a set of tools or utilities. Copying such utilities and tools to each VM can be a time consuming exercise. By mounting an Azure file share locally on the VMs, a developer and administrator can quickly access their tools and utilities, no copying required.
+        
+- **Containerization**:  
+    You can also use Azure file shares as persistent volumes for stateful containers. Containers deliver "build once, run anywhere" capabilities that enable developers to accelerate innovation. For the containers that access raw data at every start, a shared file system is required to allow these containers to access the file system no matter which instance they run on.
+
+## Key Benefits
+
+- **Easy to use**. When an Azure file share is mounted on your computer, you don't need to do anything special to access the data: just navigate to the path where the file share is mounted and open/modify a file.
+- **Shared access**. Azure file shares support the industry standard SMB and NFS protocols, meaning you can seamlessly replace your on-premises file shares with Azure file shares without worrying about application compatibility. Being able to share a file system across multiple machines, applications, and application instances is a significant advantage for applications that need shareability.
+- **Fully managed**. Azure file shares can be created without the need to manage hardware or an OS. This means you don't have to deal with patching the server OS with critical security upgrades or replacing faulty hard disks.
+- **Scripting and tooling**. You can use PowerShell cmdlets and Azure CLI to create, mount, and manage Azure file shares as part of the administration of Azure applications. Create and manage Azure file shares using Azure portal and Azure Storage Explorer.
+- **Resiliency**. Azure Files is built to be always available. Replacing on-premises file shares with Azure Files means you no longer have to wake up to deal with local power outages or network issues.
+- **Familiar programmability**. Applications running in Azure can access data in the share via file [system I/O APIs](https://learn.microsoft.com/en-us/dotnet/api/system.io.file). Developers can therefore leverage their existing code and skills to migrate existing applications. In addition to System IO APIs, you can use [Azure Storage Client Libraries](https://learn.microsoft.com/en-us/previous-versions/azure/dn261237\(v=azure.100\)) or the [Azure Files REST API](https://learn.microsoft.com/en-us/rest/api/storageservices/file-service-rest-api).
