--- a/Cloud Computing/Azure/Azure Fundamentals/Azure Services/Storage/6.0 Data Migration.md
+++ b/Cloud Computing/Azure/Azure Fundamentals/Azure Services/Storage/6.0 Data Migration.md
@@ -1,5 +1,4 @@
-## Azure Migrate
-
+# Azure Migrate
 
 Azure Migrate is a service that helps you migrate from an on-premises environment to the cloud. Azure Migrate functions as a hub to help you manage the assessment and migration of your on-premises datacenter to Azure. It provides the following:
 
@@ -18,4 +17,62 @@ In addition to working with tools from ISVs, the Azure Migrate hub also includes
 - **Azure App Service migration assistant**. Azure App Service migration assistant is a standalone tool to assess on-premises websites for migration to Azure App Service. Use Migration Assistant to migrate .NET and PHP web apps to Azure.
 - **Azure Data Box**. Use Azure Data Box products to move large amounts of offline data to Azure.
 
+
+## Migration phases
+
+Azure Migrate provides a simplified migration, modernization, and optimization service for customers who want to migrate their on-premises workloads to Azure. It gives you a one-stop solution for migrating your infrastructure, data, and web application workloads.
+
+A general migration journey includes the following phases. Azure Migrate provides support at each phase.
+
+![[migrate-001.png]]
+### Decide
+
+The first step in a migration journey is to identify your workloads. This process of identification is called _discovery_. To discover your workloads, you can deploy a lightweight [Azure Migrate appliance](https://learn.microsoft.com/en-us/azure/migrate/migrate-appliance?view=migrate-classic) (recommended approach) or quickly import the inventory data for your workloads.
+
+The Azure Migrate appliance is a virtual appliance that can be deployed on a server in your datacenter. The appliance collects the configuration and performance data for your servers and continually sends it to the Azure Migrate service.
+
+After you identify the inventory of workloads, you can create a _business case_ to make your decision to migrate your on-premises workloads to Azure. A business case helps you estimate the costs and savings of moving to Azure. It helps you identify:
+
+- Total cost of ownership for on-premises versus Azure.
+- Year-over-year comparison of cash flows.
+- Resource utilization-based insights on Azure targets.
+- Long-term cost reduction by switching from a capital expenditure (CapEx) model to an operating expenditure (OpEx) model.
+### Plan
+
+After you make the decision to migrate to Azure, the next important phase of migration is planning. To plan migration in detail, use Azure Migrate assessments to find:
+
+- **Azure readiness**: Assess whether on-premises servers, SQL servers, and web apps are ready for migration to Azure.
+- **Right-sizing**: Estimate the size of Azure virtual machines (VMs), the Azure SQL configuration, and the number of Azure VMware Solution nodes after migration.
+- **Azure cost estimation**: Estimate costs for running on-premises servers in Azure.
+- **Dependency analysis**: Understand the network dependencies between servers in your datacenter so that you can make high-confidence migration plans without missing any critical dependency. [Learn more about dependency analysis](https://learn.microsoft.com/en-us/azure/migrate/concepts-dependency-visualization?view=migrate-classic).
+### Execute
+
+In the execution phase, you perform the migration or modernization of your workloads to move to Azure. You can use the Azure Migrate service or partner tools to migrate your servers, databases, web apps, or virtual desktops with minimal downtime and risk.
+
+# Azure Data Box
+
+Azure Data Box is a physical migration service that helps transfer large amounts of data in a quick, inexpensive, and reliable way. The secure data transfer is accelerated by shipping you a proprietary Data Box storage device that has a maximum usable storage capacity of 80 terabytes. The Data Box is transported to and from your datacenter via a regional carrier. A rugged case protects and secures the Data Box from damage during transit.
+
+You can order the Data Box device via the Azure portal to import or export data from Azure. Once the device is received, you can quickly set it up using the local web UI and connect it to your network. Once you’re finished transferring the data (either into or out of Azure), simply return the Data Box. If you’re transferring data into Azure, the data is automatically uploaded once Microsoft receives the Data Box back. The entire process is tracked end-to-end by the Data Box service in the Azure portal.
+
+## Use cases
+
+Data Box is ideally suited to transfer data sizes larger than 40 TBs in scenarios with no to limited network connectivity. The data movement can be one-time, periodic, or an initial bulk data transfer followed by periodic transfers.
+
+Here are the various scenarios where Data Box can be used to import data to Azure.
+
+- Onetime migration - when a large amount of on-premises data is moved to Azure.
+- Moving a media library from offline tapes into Azure to create an online media library.
+- Migrating your VM farm, SQL server, and applications to Azure.
+- Moving historical data to Azure for in-depth analysis and reporting using HDInsight.
+- Initial bulk transfer - when an initial bulk transfer is done using Data Box (seed) followed by incremental transfers over the network.
+- Periodic uploads - when large amount of data is generated periodically and needs to be moved to Azure.
+
+Here are the various scenarios where Data Box can be used to export data from Azure.
+
+- Disaster recovery - when a copy of the data from Azure is restored to an on-premises network. In a typical disaster recovery scenario, a large amount of Azure data is exported to a Data Box. Microsoft then ships this Data Box, and the data is restored on your premises in a short time.
+- Security requirements - when you need to be able to export data out of Azure due to government or security requirements.
+- Migrate back to on-premises or to another cloud service provider - when you want to move all the data back to on-premises, or to another cloud service provider, export data via Data Box to migrate the workloads.
+
+Once the data from your import order is uploaded to Azure, the disks on the device are wiped clean in accordance with NIST 800-88r1 standards. For an export order, the disks are erased once the device reaches the Azure datacenter.
 
