--- a/Cloud Computing/Azure/Azure Fundamentals/Azure Services/Networking/1.0 Virtual Networks.md
+++ b/Cloud Computing/Azure/Azure Fundamentals/Azure Services/Networking/1.0 Virtual Networks.md
@@ -66,3 +66,28 @@ Integrating Azure services with an Azure virtual network enables private access 
 - Use [Azure Private Link](https://learn.microsoft.com/en-us/azure/private-link/private-link-overview) to privately access a specific instance of the service from your virtual network and from on-premises networks.
     
 - Access the service over public endpoints by extending a virtual network to the service, through [service endpoints](https://learn.microsoft.com/en-us/azure/virtual-network/virtual-network-service-endpoints-overview). Service endpoints allow service resources to be secured to the virtual network.
+
+# Azure Virtual Network concepts and best practices
+
+## Virtual Network Concepts
+
+- **Address space:** When creating a virtual network, you must specify a custom private IP address space using public and private (RFC 1918) addresses. Azure assigns resources in a virtual network a private IP address from the address space that you assign. For example, if you deploy a VM in a virtual network with address space, 10.0.0.0/16, the VM is assigned a private IP like 10.0.0.4.
+    
+- **Subnets:** Subnets enable you to segment the virtual network into one or more sub networks and allocate a portion of the virtual network's address space to each subnet. You can then deploy Azure resources in a specific subnet. Just like in a traditional network, subnets allow you to segment your virtual network address space into segments that are appropriate for the organization's internal network. Segmentation improves address allocation efficiency. You can secure resources within subnets using Network Security Groups. For more information, see [Network security groups](https://learn.microsoft.com/en-us/azure/virtual-network/network-security-groups-overview).
+    
+- **Regions**: A virtual network is scoped to a single region/location; however, multiple virtual networks from different regions can be connected together using Virtual Network Peering.
+    
+- **Subscription:** A virtual network is scoped to a subscription. You can implement multiple virtual networks within each Azure [subscription](https://learn.microsoft.com/en-us/azure/azure-glossary-cloud-terminology?toc=/azure/virtual-network/toc.json#subscription) and Azure [region](https://learn.microsoft.com/en-us/azure/azure-glossary-cloud-terminology?toc=/azure/virtual-network/toc.json#region).
+
+## Best Practices
+
+As you build your network in Azure, it's important to keep in mind the following universal design principles:
+
+- Ensure address spaces don't overlap. Make sure your virtual network address space (CIDR block) doesn't overlap with your organization's other network ranges.
+    
+- Your subnets shouldn't cover the entire address space of the virtual network. Plan ahead and reserve some address space for the future.
+    
+- Use a few large virtual networks instead of multiple small ones to reduce management overhead.
+    
+- Secure your virtual networks by assigning Network Security Groups (NSGs) to the subnets beneath them. For more information about network security concepts, see [Azure network security overview](https://learn.microsoft.com/en-us/azure/security/fundamentals/network-overview).
+
