--- a/Cloud Computing/Azure/Azure Fundamentals/Azure Services/Networking/2.0 Hybrid connectivity.md
+++ b/Cloud Computing/Azure/Azure Fundamentals/Azure Services/Networking/2.0 Hybrid connectivity.md
@@ -1,3 +1,6 @@
 
 This section describes network connectivity services that provide a secure communication between your on-premises network and Azure - VPN Gateway, ExpressRoute, Virtual WAN, and Peering Service.
 
+[[2.1 VPN Gateway]]
+
+[[2.2 Azure ExpressRoute]]
