--- a/Cloud Computing/Azure/Azure Fundamentals/Azure Services/Networking/2.1 VPN Gateway.md
+++ b/Cloud Computing/Azure/Azure Fundamentals/Azure Services/Networking/2.1 VPN Gateway.md
@@ -8,3 +8,66 @@ The following diagram illustrates multiple site-to-site VPN connections to the s
 
 ![[net-003.png]]
 
+Azure VPN Gateway service can be used to send encrypted traffic between an Azure virtual network and on-premises locations over the public Internet. You can also use VPN Gateway to send encrypted traffic between Azure virtual networks over the Microsoft network. VPN Gateway uses a specific type of Azure virtual network gateway called a VPN gateway. Multiple connections can be created to the same VPN gateway. When you create multiple connections, all VPN tunnels share the available gateway bandwidth.
+
+## Why use VPN gateway
+
+Here are some of the key scenarios for VPN Gateway:
+
+- Send encrypted traffic between an Azure virtual network and on-premises locations over the public Internet using one of the following types of connections:
+    
+    - **Site-to-site connection:** A cross-premises IPsec/IKE VPN tunnel connection between the VPN gateway and an on-premises VPN device.
+        
+    - **Point-to-site connection:** VPN over OpenVPN, IKEv2, or SSTP. This type of connection lets you connect to your virtual network from a remote location, such as from a conference or from home.
+        
+- Send encrypted traffic between Azure virtual networks using the following types of connections:
+    
+    - **VNet-to-VNet:** An IPsec/IKE VPN tunnel connection between the VPN gateway and another Azure VPN gateway that uses a _VNet-to-VNet_ connection type. This connection type is designed specifically for VNet-to-VNet connections.
+        
+    - **Site-to-site connection:** An IPsec/IKE VPN tunnel connection between the VPN gateway and another Azure VPN gateway. This type of connection, when used in the VNet-to-VNet architecture, uses the _Site-to-site (IPsec)_ connection type, which allows cross-premises connections to the gateway in addition connections between VPN gateways.
+        
+- Configure a site-to-site VPN as a secure failover path for [ExpressRoute](https://learn.microsoft.com/en-us/azure/expressroute/expressroute-introduction) using:
+    
+    - **ExpressRoute + VPN Gateway:** A combination of ExpressRoute + VPN Gateway connections (coexisting connections).
+- Use site-to-site VPNs to connect to sites that aren't connected through [ExpressRoute](https://learn.microsoft.com/en-us/azure/expressroute/expressroute-introduction) using:
+    
+    - **ExpressRoute + VPN Gateway:** A combination of ExpressRoute + VPN Gateway connections (coexisting connections).
+
+## Planning and design
+
+Because you can create multiple connection configurations using VPN Gateway, you need to determine which configuration best fits your needs. Point-to-site, site-to-site, and coexisting ExpressRoute/site-to-site connections all have different instructions and resource configuration requirements.
+
+### Site-to-site VPN Connections
+
+A site-to-site (S2S) VPN gateway connection is a connection over IPsec/IKE (IKEv1 or IKEv2) VPN tunnel. Site-to-site connections can be used for cross-premises and hybrid configurations. A site-to-site connection requires a VPN device located on-premises that has a public IP address assigned to it.
+
+![[net-004.png]]
+
+You can create more than one VPN connection from your virtual network gateway, typically connecting to multiple on-premises sites. When working with multiple connections, you must use a RouteBased VPN type. Because each virtual network can only have one VPN gateway, all connections through the gateway share the available bandwidth. This type of connectivity design is sometimes referred to as _multi-site_.
+
+![[net-005.png]]
+
+### Point-to-site VPN
+
+A point-to-site (P2S) VPN gateway connection lets you create a secure connection to your virtual network from an individual client computer. A point-to-site connection is established by starting it from the client computer. This solution is useful for telecommuters who want to connect to Azure virtual networks from a remote location, such as from home or a conference. Point-to-site VPN is also a useful solution to use instead of site-to-site VPN when you have only a few clients that need to connect to a virtual network.
+
+Unlike site-to-site connections, point-to-site connections don't require an on-premises public-facing IP address or a VPN device. Point-to-site connections can be used with site-to-site connections through the same VPN gateway, as long as all the configuration requirements for both connections are compatible. For more information about point-to-site connections, see [About point-to-site VPN](https://learn.microsoft.com/en-us/azure/vpn-gateway/point-to-site-about).
+
+### Vnet-to-Vnet connections (IPsec/IKE VPN tunnel)
+
+Connecting a virtual network to another virtual network (VNet-to-VNet) is similar to connecting a virtual network to an on-premises site location. Both connectivity types use a VPN gateway to provide a secure tunnel using IPsec/IKE. You can even combine VNet-to-VNet communication with multi-site connection configurations. This lets you establish network topologies that combine cross-premises connectivity with inter-virtual network connectivity.
+
+The virtual networks you connect can be:
+
+- in the same or different regions
+- in the same or different subscriptions
+
+![[knowledge-base/Cloud Computing/Azure/Azure Fundamentals/Azure Services/Networking/images/net-006.png]]
+
+### Site-to-site and ExpressRoute coexisting connections
+
+[ExpressRoute](https://learn.microsoft.com/en-us/azure/expressroute/expressroute-introduction) is a direct, private connection from your WAN (not over the public Internet) to Microsoft Services, including Azure. Site-to-site VPN traffic travels encrypted over the public Internet. Being able to configure site-to-site VPN and ExpressRoute connections for the same virtual network has several advantages.
+
+You can configure a site-to-site VPN as a secure failover path for ExpressRoute, or use site-to-site VPNs to connect to sites that aren't part of your network, but that are connected through ExpressRoute. Notice that this configuration requires two virtual network gateways for the same virtual network, one using the gateway type _Vpn_, and the other using the gateway type _ExpressRoute_.
+
+![[net-006 1.png]]
