--- a/Cloud Computing/Azure/Azure Fundamentals/Azure Services/Networking/2.2 Azure ExpressRoute.md
+++ b/Cloud Computing/Azure/Azure Fundamentals/Azure Services/Networking/2.2 Azure ExpressRoute.md
@@ -7,3 +7,100 @@ Connectivity can be from an any-to-any (IP VPN) network, a point-to-point Ethern
 In the context of ExpressRoute, the Microsoft Edge describes the edge routers on the Microsoft side of the ExpressRoute circuit. This is the ExpressRoute circuit's point of entry into Microsoft's network.
 
 Azure ExpressRoute is one of the services that make up the Hybrid Connectivity category in Azure. Other services in this category include [VPN Gateway](https://learn.microsoft.com/en-us/azure/vpn-gateway/vpn-gateway-about-vpngateways) and [Virtual WAN](https://learn.microsoft.com/en-us/azure/virtual-wan/virtual-wan-about). Each service has its own unique features and use cases. For more information on this service category, see [Hybrid Connectivity](https://learn.microsoft.com/en-us/azure/networking/hybrid-connectivity/hybrid-connectivity).
+
+## Key Benefits
+
+- Layer 3 connectivity between your on-premises network and the Microsoft Cloud through a connectivity provider. Connectivity can be from an any-to-any (IPVPN) network, a point-to-point Ethernet connection, or through a virtual cross-connection via an Ethernet exchange.
+- Connectivity to Microsoft cloud services across all regions in the geopolitical region.
+- Global connectivity to Microsoft services across all regions with the ExpressRoute premium add-on.
+- Dynamic routing between your network and Microsoft via BGP.
+- Built-in redundancy in every peering location for higher reliability.
+- Connection uptime [SLA](https://azure.microsoft.com/support/legal/sla/).
+- QoS support for Skype for Business.
+
+## Features
+
+### Layer 3 connectivity
+
+Microsoft uses BGP, an industry standard dynamic routing protocol, to exchange routes between your on-premises network, your instances in Azure, and Microsoft public addresses. We establish multiple BGP sessions with your network for different traffic profiles. More details can be found in the [ExpressRoute circuit and routing domains](https://learn.microsoft.com/en-us/azure/expressroute/expressroute-circuit-peerings) article.
+
+### Redundancy
+
+Each ExpressRoute circuit consists of two connections to two Microsoft Enterprise edge routers (MSEEs) at an [ExpressRoute Location](https://learn.microsoft.com/en-us/azure/expressroute/expressroute-locations#expressroute-locations) from the connectivity provider or your network edge. Microsoft requires dual BGP connections from the connectivity provider or your network edge – one to each MSEE. You might choose not to deploy redundant devices/Ethernet circuits at your end. However, connectivity providers use redundant devices to ensure that your connections are handed off to Microsoft in a redundant manner.
+
+### Resiliency
+
+Microsoft offers multiple ExpressRoute peering locations in many geopolitical regions. For maximum resiliency, Microsoft recommends that you establish connection to two ExpressRoute circuits in two peering locations. For non-production and non-critical workloads, you can achieve standard resiliency by connecting to a single ExpressRoute circuit that offers redundant connections within a single peering location. The Azure portal provides a guided experience to help you create a resilient ExpressRoute configuration. For Azure PowerShell, CLI, ARM template, Terraform, and Bicep, maximum resiliency can be achieved by creating a second ExpressRoute circuit in a different ExpressRoute location and establishing a connection to it. For more information, see [Create maximum resiliency with ExpressRoute](https://learn.microsoft.com/en-us/azure/expressroute/expressroute-howto-circuit-portal-resource-manager?pivots=expressroute-preview).
+
+![[net-008.png]]
+
+### Connectivity to Microsoft cloud services
+
+ExpressRoute connections enable access to the following services:
+
+- Microsoft Azure services
+- Microsoft 365 services
+
+### Connectivity to all regions within a geopolitical region
+
+You can connect to Microsoft from one of our [peering locations](https://learn.microsoft.com/en-us/azure/expressroute/expressroute-locations) and access regions within the same geopolitical region.
+
+For example, if you connect to Microsoft in Amsterdam through ExpressRoute. You have access to all of Microsoft cloud services hosted in North and West Europe. For an overview of the geopolitical regions, the associated Microsoft cloud regions, and corresponding ExpressRoute peering locations, see the [ExpressRoute partners and peering locations](https://learn.microsoft.com/en-us/azure/expressroute/expressroute-locations) article.
+
+### Global connectivity with ExpressRoute Premium
+
+You can enable [ExpressRoute Premium](https://learn.microsoft.com/en-us/azure/expressroute/expressroute-faqs#expressroute-premium) to extend connectivity across geopolitical boundaries. If you connect to Microsoft in Amsterdam through ExpressRoute, you have access to all of Microsoft cloud services hosted in every region across the globe. For example, you have access to services deployed in West US or Australian East the same way you access North and West Europe regions. National clouds are excluded.
+
+### Local connectivity with ExpressRoute Local
+
+You can transfer data cost-effectively by enabling the [Local SKU](https://learn.microsoft.com/en-us/azure/expressroute/expressroute-faqs#expressroute-local). With Local SKU, you can bring your data to an ExpressRoute location near the Azure region you want. With Local, Data transfer is included in the ExpressRoute port charge.
+
+For peering location and supported Azure local region, see [providers by locations](https://learn.microsoft.com/en-us/azure/expressroute/expressroute-locations-providers#partners).
+
+### Across on-premises connectivity with ExpressRoute Global Reach
+
+By enabling ExpressRoute Global Reach, you can exchange data across your on-premises sites through your ExpressRoute circuits. For instance, suppose you have two private data centers, one in California and one in Texas, each connected to an ExpressRoute circuit in their respective regions. You can use ExpressRoute Global Reach to link your data centers with these circuits, and your cross data-center traffic uses the Microsoft network.
+
+### Rich connectivity 
+
+ExpressRoute has a constantly growing ecosystem of connectivity providers and systems integrator partners. For the latest information, see [ExpressRoute partners and peering locations](https://learn.microsoft.com/en-us/azure/expressroute/expressroute-locations).
+
+### Connectivity yo national clouds
+
+Microsoft operates isolated cloud environments for special geopolitical regions and customer segments. For a list of national clouds and providers, see [ExpressRoute partners and peering locations](https://learn.microsoft.com/en-us/azure/expressroute/expressroute-locations#national-cloud-environment).
+
+### ExpressRoute Direct
+
+ExpressRoute Direct provides customers the opportunity to connect directly into Microsoft’s global network at peering locations strategically distributed across the world. ExpressRoute Direct provides dual 100-Gbps connectivity, which supports Active/Active connectivity at scale.
+
+Key features that ExpressRoute Direct provides include, but aren't limited to:
+
+- Massive data ingestion into services like Azure Storage and Azure Cosmos DB.
+- Physical isolation for industries that are regulated and require dedicated and isolated connectivity. For example: banks, governments, and retails.
+- Granular control of circuit distribution based on business unit.
+
+### Bandwidth options
+
+You can purchase ExpressRoute circuits for a wide range of bandwidths. The supported bandwidths are listed as follows. Be sure to check with your connectivity provider to determine the bandwidths they support.
+
+- 50 Mbps
+- 100 Mbps
+- 200 Mbps
+- 500 Mbps
+- 1 Gbps
+- 2 Gbps
+- 5 Gbps
+- 10 Gbps
+
+The built-in redundancy of your circuit is configured using primary and secondary connections, each of the procured bandwidth, to two Microsoft Enterprise Edge routers (MSEEs). The bandwidth available through your secondary connection can be used for more traffic if necessary. Since the secondary connection is meant for redundancy, it isn't guaranteed and shouldn't be used for extra traffic for a sustained period of time. If you plan to use only your primary connection to transmit traffic, the bandwidth for the connection is fixed, and attempting to oversubscribe it results in increased packet drops.
+
+### Flexible billing bandwidth 
+
+You can select a billing model that works best for you:
+
+- **Unlimited data**. Billing is based on a monthly fee; all inbound and outbound data transfer is included free of charge.
+- **Metered data**. Billing is based on a monthly fee; all inbound data transfer is free of charge. Outbound data transfer is charged per GB of data transfer. Data transfer rates vary by region.
+- **ExpressRoute premium add-on**. ExpressRoute premium is an add-on to the ExpressRoute circuit. The ExpressRoute premium add-on provides the following capabilities:
+    - Increased route limits for Azure public and Azure private peering from 4,000 routes to 10,000 routes.
+    - Global connectivity for services. An ExpressRoute circuit created in any region (excluding national clouds) has access to resources across every other region in the world. For example, a virtual network created in West Europe can be accessed through an ExpressRoute circuit provisioned in Silicon Valley.
+    - Increased number of virtual network links per ExpressRoute circuit from 10 to a larger limit, depending on the bandwidth of the circuit.
