--- a/Cloud Computing/Azure/Developer/ARM templates/1.0 ARM Templates - overview.md
+++ b/Cloud Computing/Azure/Developer/ARM templates/1.0 ARM Templates - overview.md
@@ -5,7 +5,7 @@ To implement infrastructure as code for your Azure solutions, use Azure Resource
 
 ## Why choose ARM templates? 
 
-Azure Resource Manager (ARM) templates offer  the following advantages
+Azure Resource Manager (ARM) templates offer the following advantages
 
 - **Declarative syntax**: ARM templates allow you to create and deploy an entire Azure infrastructure declaratively. For example, you can deploy not only virtual machines, but also the network infrastructure, storage systems, and any other resources you need.
 
@@ -36,3 +36,89 @@ Azure Resource Manager (ARM) templates offer  the following advantages
 - **Exportable code**: You can get a template for an existing resource group by either exporting the current state of the resource group or viewing the template used for a particular deployment. Viewing the [exported template](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/export-template-portal) is a helpful way to learn about the template syntax.
 
 - **Authoring tools**: You can author templates with [Visual Studio Code](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/quickstart-create-templates-use-visual-studio-code) and the template tool extension. You get IntelliSense, syntax highlighting, in-line help, and many other language functions. In addition to Visual Studio Code, you can also use [Visual Studio](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/create-visual-studio-deployment-project).
+
+## Template File 
+
+Within your template, you can write [template expressions](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/template-expressions) that extend the capabilities of JSON. These expressions use the [functions](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/template-functions) that Resource Manager provides.
+
+The template has the following sections:
+
+- [Parameters](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/parameters) - Provide values during deployment that you customize for different environments when using the same template.
+    
+- [Variables](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/variables) - Define values that you reuse in your templates. You can construct them from parameter values.
+    
+- [User-defined functions](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/user-defined-functions) - Create customized functions that simplify your template.
+    
+- [Resources](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/resource-declaration) - Specify the resources to deploy.
+    
+- [Outputs](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/outputs) - Return values from the deployed resources.
+
+## Template deployment process
+
+When you deploy a template, Resource Manager converts the template into REST API operations. For example, when Resource Manager receives a template with the following resource definition:
+
+```JSON
+"resources": [
+  {
+    "type": "Microsoft.Storage/storageAccounts",
+    "apiVersion": "2022-09-01",
+    "name": "mystorageaccount",
+    "location": "centralus",
+    "sku": {
+      "name": "Standard_LRS"
+    },
+    "kind": "StorageV2"
+  },
+]
+```
+
+
+It converts the definition to the following REST API operation, which it sends to the Microsoft.Storage resource provider
+
+```HTTP
+PUT
+https://management.azure.com/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.Storage/storageAccounts/mystorageaccount?api-version=2022-09-01
+REQUEST BODY
+{
+  "location": "centralus",
+  "sku": {
+    "name": "Standard_LRS"
+  },
+  "kind": "StorageV2",
+  "properties": {}
+}
+```
+
+Notice that the **apiVersion** you set in the template for the resource is used as the API version for the REST operation. You can repeatedly deploy the template and have confidence it continues to work. By using the same API version, you don't have to worry about breaking changes that might be introduced in later versions.
+
+To deploy a template, use any of the following options:
+
+- [Azure portal](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/deploy-portal)
+- [Azure CLI](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/deploy-cli)
+- [PowerShell](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/deploy-powershell)
+- [REST API](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/deploy-rest)
+- [Button in GitHub repository](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/deploy-to-azure-button)
+- [Azure Cloud Shell](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/deploy-cloud-shell)
+
+## Template design 
+
+Define templates and resource groups based on how you want to manage your solution. For example, you can deploy your three-tier application through a single template to a single resource group.
+
+![[arm-002.png]]
+
+You don't have to define your entire infrastructure in a single template. Often, it makes sense to divide your deployment requirements into a set of targeted, purpose-specific templates. You can easily reuse these templates for different solutions. To deploy a particular solution, create a main template that links all the required templates. The following image shows how to deploy a three-tier solution through a parent template that includes three nested templates.
+
+![[arm-001.png]]
+
+If you envision your tiers having separate lifecycles, you can deploy your three tiers to separate resource groups. The resources can still be linked to resources in other resource groups.
+
+![[arm-003.png]]
+
+## Share templates
+
+After creating your template, you might want to share it with other users in your organization. [Template specs](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/template-specs) enable you to store a template as a resource type. Use role-based access control to manage access to the template spec. Users with read access to the template spec can deploy it, but not change the template.
+
+This approach means you can safely share templates that meet your organization's standards.
+
+Below is covered the ARM template concepts
+
