--- a/Cloud Computing/Azure/Developer/ARM templates/5.0 Deployment history deletions.md
+++ b/Cloud Computing/Azure/Developer/ARM templates/5.0 Deployment history deletions.md
@@ -10,3 +10,39 @@ Deployments are deleted from your history when you exceed 700 deployments. Azure
 
 **Important:** If your scope is already at the 800 limit, your next deployment fails with an error. The automatic deletion process starts immediately. You can try your deployment again after a short wait. 
 
+In addition to deployments, you also trigger deletions when you run the [what-if operation](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/deploy-what-if) or validate a deployment.
+
+When you give a deployment the same name as one in the history, you reset its place in the history. The deployment moves to the most recent place in the history. You also reset a deployment's place when you [roll back to that deployment](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/rollback-on-error) after an error.
+
+## Permissions required for automatic deletions
+
+The deletions are requested under the identity of the user who deployed the template. To delete deployments, the user must have access to the **Microsoft.Resources/deployments/delete** action. If the user doesn't have the required permissions, deployments aren't deleted from the history.
+
+If the current user doesn't have the required permissions, automatic deletion is attempted again during the next deployment.
+
+## Handling resource locks
+
+If you have a [CanNotDelete lock](https://learn.microsoft.com/en-us/azure/azure-resource-manager/management/lock-resources) on a resource group or a subscription, the deployments for that scope can't be automatically deleted. To enable automatic cleanup of the deployment history, you need to remove the lock.
+
+To delete a resource group lock, run the following commands:
+
+```SHELL
+$lockId = (Get-AzResourceLock -ResourceGroupName lockedRG).LockId
+Remove-AzResourceLock -LockId $lockId
+```
+
+## Opting out of automatic deletions
+
+You can opt out of automatic deletion to manually manage your deployment history. **Use this option cautiously**, as the **800-deployment limit** remains enforced, and exceeding it causes deployment failures.
+
+**Important:** Opting out is available only for subscription scopes, as it's controlled by the subscription-level `Microsoft.Resources/DisableDeploymentGrooming` feature flag. You can't opt out for only a particular resource group. For tenant or management group scopes, open a [support ticket](https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/overview#get-support) to disable automatic deletion.
+
+To disable automatic deletion at the subscription scope (affects all resource groups within it):
+
+```SHELL
+Register-AzProviderFeature -ProviderNamespace Microsoft.Resources -FeatureName DisableDeploymentGrooming
+```
+
+```SHELL
+Get-AzProviderFeature -ProviderNamespace Microsoft.Resources -FeatureName DisableDeploymentGrooming
+```
